--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
+    "netlify": "^13.1.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
