--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
-    "moment": "^2.29.1",
+    "latest": "^0.2.0",
+    "moment": "^2.29.4",
     "netlify": "^13.1.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
